k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asw-app
spec:
  type: NodePort
  selector:
    app: asw
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
